--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 spring.application.name=MovieReservationRoadmapssh
-logging.level.root=
-spring.h2.console.enabled=true
+logging.level.org.springframework.security = DEBUG
+
+# Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.username=sugoi
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=none
-logging.level.org.springframework.security: TRACE
+spring.sql.init.mode=always
+spring.jpa.show-sql=true
