--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=MovieReservationRoadmapssh
-logging.level.org.springframework.security = DEBUG
+#logging.level.org.springframework.security = DEBUG
 
 # Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
