--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=MovieReservationRoadmapssh
 logging.level.org.springframework.security = DEBUG
 
 # Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.url=jdbc:postgresql://localhost:5432/db?**Timezone=Asia/Kolkata**
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=sugoi
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -16,3 +17,8 @@ spring.jpa.show-sql=true
 # File/Image upload Limits
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+
+# test
+
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
